syntax= "proto3";

message Cashflow {
    double int_amt= 1;
    double prin_amt= 2;
    int64 date= 3;
}
message Account {
    string acc_no= 1;
    string acnts_internal_acnum= 2;
    int64 acnts_brn_cd= 3;
    int64 acnts_client_num= 4;
    int64 ucic= 5;
    string acnts_curr_cd= 6;
    int64 acnts_prod_cd= 7;
    int64 gl_cd= 8;
    int64 acnts_opening_dt= 9;
    double bal= 10;
    string bal_ccy= 11;
    double int_rt= 12;
    string int_type= 13;
    string int_bench= 14;
    string int_spread= 15;
    int64 last_reset_dt= 16;
    int64 next_reset_dt= 17;
    int64 reset_no_of_months= 18;
    double disbursal_amount= 19;
    int64 last_emi_dt= 20;
    int64 lm_exp= 21;
    double lim= 22;
    string lm_ccy= 23;
    string ext_rating_agency= 24;
    string ext_rating= 25;
    string int_rating= 26;
    string asset_cd= 27;
    double prov_amt= 28;
    int64 prov_dt= 29;
    string constitn= 30;
    string loan_type= 31;
    double def_amt= 32;
    int64 def_dt= 33;
    int64 last_paid_emi_dt= 34;
    int64 w4b_cd= 35;
    string balm_llg= 36;
    string care_llg= 37;
    string ba_llg= 38;
    string client_type= 39;
    string clients_name= 40;
    string clients_bsr_type_flg= 41;
    string clients_busdivn_code= 42;
    string clients_const_code= 43;
    string clients_pan_gir_num= 44;
    string clients_risk_categorization= 45;
    string clients_risk_cntry= 46;
    string clients_segment_code= 47;
    string corpcl_orgn_qualifier= 48;
    string corpcl_indus_code= 49;
    string corpcl_nature_of_bus1= 50;
    string corpcl_nature_of_bus2= 51;
    string corpcl_nature_of_bus3= 52;
    string corpcl_central_state_flg= 53;
    string corpcl_public_sector_flg= 54;
    string corpcl_primary_dlr_flg= 55;
    string corpcl_multilateral_bank= 56;
    string corpcl_connp_inv_num= 57;
    double corpcl_bc_gross_turnover= 58;
    string npa_asset_cd= 59;
    int64 npa_dt= 60;
    double acc_bal= 61;
    double pwo= 62;
    double ho_bal= 63;
    double npa_prov= 64;
    double ho_prov= 65;
    double suspence_bal= 66;
    double suspence_writeoff= 67;
    double ho_suspence= 68;
    double claim= 69;
    double primary= 70;
    double col= 71;
    string priority= 72;
    string main_sector= 73;
    string industry= 74;
    double npa_amt= 75;
    string schedules= 76;
    int64 sanc_dt= 77;
    string occp_cd= 78;
    string sens_sec= 79;
    string prior_subtype= 80;
    string restruct_flag= 81;
    int64 restruct_dt= 82;
    string mor_prd= 83;
    string rating= 84;
    string consitin= 85;
    string pan= 86;
    double limit_amt= 87;
    double gross_adv= 88;
    double exp_amt= 89;
    double unvail_amt= 90;
    double gold_gram= 91;
    string fund_flag= 92;
    double ltv_value= 93;
    int64 pt_i64_1= 94;
    int64 pt_i64_2= 95; 
    int64 pt_i64_3= 96;
    int64 pt_i64_4= 97;
    int64 pt_i64_5= 98;
    double pt_f64_1= 99;
    double pt_f64_2= 100;
    double pt_f64_3= 101;
    double pt_f64_4= 102;
    double pt_f64_5= 103;
    string pt_str_1= 104;
    string pt_str_2= 105;
    string pt_str_3= 106;
    string pt_str_4= 107;
    string pt_str_5= 108;
    string org_code= 109;
    repeated Cashflow cashflows= 110;
}
